# reliat_v1.0.0

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
.claude/hooks/: frontend_design_lock.py
.claude/skills/deploy/: SKILL.md
.claude/skills/frontend-design-locked/: SKILL.md
.github/workflows/: ci.yml
apps/web/: .env.example
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/agent/: page.tsx
apps/web/app/channels/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/logout/: page.tsx
apps/web/app/notes/: page.tsx
apps/web/app/outliers/: page.tsx
apps/web/app/pulse/: page.tsx
apps/web/app/register/: page.tsx
apps/web/components/: charts.tsx  ui.tsx
apps/web/components/auth/: AuthGuard.tsx  Input.tsx  OAuthLogos.tsx
apps/web/components/charts/: MetricRangeBadge.tsx  MultiMetricGrid.tsx  PsdCurveChart.tsx  SpcChart.tsx
apps/web/components/screens/: AgentScreen.tsx  ChannelsScreen.tsx  LibraryScreen.tsx  LoginScreen.tsx  (+4 more)
apps/web/lib/: api.ts  auth.tsx  format.ts  mockData.ts  now.ts  psd.ts  types.ts
apps/web/styles/: tokens.css
backend/: README.md
backend/app/: main.py  models.py  schemas.py
backend/app/routes/: channels.py
docs/: COMPETITION_PROGRESS_LOG.md  PIPELINE_V2_PLAN.md  v1.0.0-plan.md
frontend/: Reliat v1.html  app.jsx  charts.jsx  data.jsx  tokens.css  ui.jsx
frontend/screens/: agent.jsx  channels.jsx  library.jsx  notes.jsx  outliers.jsx  pulse.jsx
services/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/api/app/: config.py  db.py  detector.py  etl.py  main.py  models.py  oauth.py  schemas.py  security.py  seed.py
services/api/app/analytics/: __init__.py  engine.py
services/api/app/ingest/: __init__.py  csv_parser.py
services/api/app/routes/: analytics.py  auth.py  channels.py  ingest.py  outliers.py
services/api/tests/: test_csv_parser.py
services/api/tests/fixtures/: cv42_sample.tsv  cv42_sample_eu.tsv
(+43 files in other folders)
