[project]
name = "reliat-backend"
version = "1.0.0"
description = "Reliat — mining outlier substrate. FastAPI + SQLAlchemy."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "email-validator>=2.1",  # enables pydantic EmailStr
    "python-multipart>=0.0.9",
    # auth
    "authlib>=1.3",       # OAuth2 client (Google / GitHub)
    "httpx>=0.27",        # async HTTP, used by authlib for token/userinfo calls
    "itsdangerous>=2.2",  # signs the session cookie that holds OAuth state
    "pyjwt>=2.8",         # our own access tokens
    "bcrypt>=4.1",        # password hashing (used directly, not via passlib)
    # analytics
    "pandas>=2.2",        # CSV parsing, rolling windows, group-by aggregations
    "numpy>=1.26",        # numeric ops underneath pandas
    "scipy>=1.13",        # stats (rolling sigma, distributions, smoothing)
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2", "pgvector>=0.3"]
dev = ["ruff>=0.6", "pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
